src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterDilate_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterDilate_StringErrorContext.class */
public final class NVConservativeRasterDilate_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glConservativeRasterParameterfNV(IF)V", "net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterDilateErrorContext");
        return methods;
    }
}
